[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
futures = "0.3"
tokio = { version = "1.29", features = ["full"] }
num_cpus = "1.16"
base64 = "0.21"
build-time = "0.1"
directories = "5.0"
libc = { version = "0.2", features = ["extra_traits"] }
rand = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
clap = { version = "4.3", features = ["wrap_help", "suggestions"] } # Command Line Argument Parser
cfg-if = "1"
ipnet = { version = "2.8", optional = true }


mimalloc = { version = "0.1", default-features = false, optional = true }
tcmalloc = { version = "0.3", optional = true }
jemallocator = { version = "0.5", optional = true }
snmalloc-rs = { version = "0.3", optional = true }
rpmalloc = { version = "0.2", optional = true }

byteorder = "1.4"
env_logger = "0.10"
byte_string = "1.0"
